--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,14 @@
         }
     ],
     "require": {
-        "php": ">=5.6.4",
-        "guzzlehttp/guzzle": "~6.0",
-        "illuminate/notifications": "5.3.*|5.4.*|5.5.*|5.6.*",
-        "illuminate/support": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*|5.6.*"
+        "php": "^7.1.3",
+        "guzzlehttp/guzzle": "^6.3",
+        "illuminate/notifications": "5.3.*|5.4.*|5.5.*|5.6.*|5.7.*",
+        "illuminate/support": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*|5.6.*|5.7.*"
     },
     "require-dev": {
-        "mockery/mockery": "^0.9.5",
-        "phpunit/phpunit": "4.*|~6.0",
+        "mockery/mockery": "^1.0",
+        "phpunit/phpunit": "^7.0",
         "orchestra/testbench": "3.3.x-dev|^3.5.0",
         "orchestra/database": "3.3.x-dev|^3.5.0"
     },
